Fixed z-index of menu & remade skills to use object array instead of HTML

--- a/huebyte/src/core/menu/Menu.scss
+++ b/huebyte/src/core/menu/Menu.scss
@@ -3,11 +3,13 @@
 $menuWidth: 400px;
 
 .menu-expander {
-  z-index: 900;
+  z-index: 999;
   top: 15px;
   font-size: xx-large;
   cursor: pointer;
   transition: 200ms ease-in-out;
+  backdrop-filter: blur(2px);
+  border-radius: 100%;
 
   &:hover {
     transform: scale(1.4);
@@ -59,20 +61,16 @@ $menuWidth: 400px;
       font-weight: bolder;
 
       &:hover {
-        background-image: linear-gradient(
-          to right,
-          theme.$port,
-          transparent 90%
-        );
+        background-image: linear-gradient(to right,
+            theme.$port,
+            transparent 90%);
         border-left: 4px solid theme.$maron;
       }
 
       &.active {
-        background-image: linear-gradient(
-          to right,
-          theme.$maron,
-          transparent 90%
-        );
+        background-image: linear-gradient(to right,
+            theme.$maron,
+            transparent 90%);
 
         &:hover {
           color: white;
